# ILTIS

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
env/: env_cross_platform.yaml
iltis/: Main.py  Signals.py
iltis/Objects/: IO_Object.py  Options_Object.py  Processing_Object.py  ROIs_Object.py
iltis/Widgets/: Data_Display_Widget.py  Data_Selector_Widget.py  Frame_Visualizer_Widget.py  Front_Control_Panel_Widget.py  LUT_Controlers_Widget.py  MainWindow_Widget.py  Options_Control_Widget.py  ROI_Manager_Widget.py  Traces_Visualizer_Stimsorted_Widget.py  Traces_Visualizer_Widget.py
iltis/io/: IOtools.py  gioIO.py
iltis/tests/: conftest.py  test_creating_savings_rois.py  test_image_loading.py  test_load_rois.py
iltis/tests/test_files/: dbb12D5.inf  dbb12D5.pst  dbb12D5.tif
iltis/tests/test_files/roi_test_files/circle_roi_files/: circle_rois_only_expected.roi  circle_rois_only_expected_mask.tif  clicks_config.yml
iltis/tests/test_files/roi_test_files/multiclick_polygon_files/: clicks_config.yml  multiclick_polygons_only_expected.roi  multiclick_polygons_only_expected_mask.tif
iltis/tests/test_files/roi_test_files/singleclick_polygon_files/: clicks_config.yml  square_polygons_rois_only_expected.roi  square_polygons_rois_only_expected_mask.tif
