# pyproject.toml
[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = 'iltis'
readme = "README.md"
license = "GPL-2.0"
dynamic = ["version"]
description = 'ILTIS - an interactive labeled-trial image stack slicer'
requires-python = ">=3.7"
dependencies = [
                   'qtpy',
                   'scipy',
                   'pyqtgraph',
                   'pandas',
                   'matplotlib',
                   'tifffile',
                   'scikit-image',
                   'numpy>=2',
]


[project.optional-dependencies]
pyqt5 = [
    "PyQt5>=5.12.2,<6"
]
pyqt6 = [
    "PyQt6 > 6.5",
    "PyQt6 != 6.6.1 ; platform_system == 'Darwin'"
]
all = ["iltis[pyqt6]"]
dev = [
    "pytest-qt",
    "pytest",
    "ipdb",
    "pyyaml"
]

[project.gui-scripts]
iltis = 'iltis.Main:main'


[tool.setuptools.package-data]
iltis = ["graphics/icons/*.svg", "graphics/*.jpg"]
